--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ logo: dengue.png
 description: Course page
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-minimal
+theme: jekyll-theme-tactile
