--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Kailiang Projects
+title: Kailiang Liu
 logo: dengue.png
-description: Course page
+description: Data Analytics and Visualization|Machine Learning|Automation
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-tactile
